full project push (backend + frontend)